--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,30 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.3.0
 cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+chromadb==1.1.0
 click==8.3.0
+coloredlogs==15.0.1
 contourpy==1.3.3
 cryptography==46.0.1
 cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.8.0
+durationpy==0.10
 email-validator==2.3.0
 fastapi==0.116.2
 fastapi-cli==0.0.12
 fastapi-cloud-cli==0.2.0
 filelock==3.19.1
 filetype==1.2.0
+flatbuffers==25.2.10
 fonttools==4.60.0
 frozenlist==1.7.0
 fsspec==2025.9.0
@@ -40,7 +47,10 @@ httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.35.0
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -48,8 +58,12 @@ jiter==0.11.0
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
+kubernetes==33.1.0
 langchain==0.3.27
+langchain-chroma==0.2.6
 langchain-community==0.3.29
 langchain-core==0.3.76
 langchain-google-genai==2.1.12
@@ -61,22 +75,36 @@ MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.6
 mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
+networkx==3.3
 numpy==2.3.3
+oauthlib==3.3.1
+onnxruntime==1.22.1
 openai==1.108.0
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
 orjson==3.11.3
+overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.3.0
 pluggy==1.6.0
+posthog==5.4.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.32.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pybase64==1.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic-extra-types==2.10.5
@@ -87,21 +115,29 @@ PyMuPDF==1.26.4
 pyparsing==3.2.4
 pypdf==6.0.0
 pypdfium2==4.30.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
+regex==2025.9.18
 requests==2.32.5
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.6.4
+rpds-py==0.27.1
 rsa==4.9.1
+safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
+sentence-transformers==5.1.0
 sentry-sdk==2.38.0
 setuptools==80.9.0
 shellingham==1.5.4
@@ -109,10 +145,13 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.48.0
+sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.0
+torch==2.8.0+cpu
 tqdm==4.67.1
+transformers==4.56.1
 typer==0.17.4
 typing-inspect==0.9.0
 typing-inspection==0.4.1
@@ -123,8 +162,9 @@ urllib3==2.5.0
 uvicorn==0.35.0
 uvloop==0.21.0
 watchfiles==1.1.0
+websocket-client==1.8.0
 websockets==15.0.1
 wheel==0.45.1
 yarl==1.20.1
+zipp==3.23.0
 zstandard==0.25.0
-sentence-transformers
