--- a/requirements.txt
+++ b/requirements.txt
@@ -149,7 +149,7 @@ sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.0
-torch==2.8.0+cpu
+torch==2.8.0
 tqdm==4.67.1
 transformers==4.56.1
 typer==0.17.4
