--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
-chromadb==0.4.24
+chromadb==1.1.0
 click==8.3.0
 coloredlogs==15.0.1
 contourpy==1.3.3
@@ -149,7 +149,7 @@ sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.0
-torch==2.8.0+cpu
+torch==2.8.0
 tqdm==4.67.1
 transformers==4.56.1
 typer==0.17.4
